--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <script src="https://js.stripe.com/v3/"></script>
-    <title>React App</title>
+    <title>Join Wilder Garten</title>
   </head>
   <body>
     <noscript>
